--- a/SpringMVCParks/.settings/org.eclipse.wst.common.component
+++ b/SpringMVCParks/.settings/org.eclipse.wst.common.component
@@ -4,5 +4,8 @@
 		<property name="context-root" value="SpringMVCParks"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="src/main/java"/>
 		<wb-resource deploy-path="/" source-path="WebContent"/>
+		<dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/JPAParks/JPAParks">
+			<dependency-type>uses</dependency-type>
+		</dependent-module>
 	</wb-module>
 </project-modules>
