--- a/SpringMVCParks/WebContent/styleSheets/deleteSheet.css
+++ b/SpringMVCParks/WebContent/styleSheets/deleteSheet.css
@@ -33,7 +33,12 @@ h2{
 	margin-top:40%;
 	margin-bottom:5%;
 }
-input[type=submit] {
+#del{
 	position:relative;
    margin-left:25%;
+   margin-right:15%;
+}
+#home{
+	position: fixed;
+	margin-left:5%;
 }
